[tool.poetry]
name = "wild-ozz"
version = "0.1.0"
description = ""
authors = ["bakeev-alexey <abakeev438@gmail.com>"]
readme = "README.md"
packages = [{include = "wild_ozz"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
