[tool.poetry]
name = "wild-ozz"
version = "0.1.0"
description = ""
authors = ["BakeevAlexey <abakeev438@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
